database.tf
resource "aws_security_group" "database-sg" {
  name = "Database SG"
  description = "Allow HTTP HTTPS and SSH traffic via terraform"
  vpc_id = aws_vpc.demovpc.id
  ingress {
    from_port       = 3306
    to_port         = 3306
    protocol        = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 32768
    to_port     = 65535
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
